# program_class

./: CMakeLists.txt  README.md  contribution.md  main.cpp  main_func.md
Algorithm/inc/: DocConvert.h  DocCount.h  DocProcess.h  FileHandle.h
Algorithm/src/: DocConvert.cpp  DocCount.cpp  DocProcess.cpp  FileHandle.cpp
algorithm/: FileHandle.cpp  FileHandle.h
data/raw/: test01.txt  test02.txt  test03.txt
data/res/: test01_2d.txt  test01_change.txt  test01_count.txt  test01_final.txt  test01_format.txt  test02_2d.txt  test02_convert.txt  test02_count.txt  test02_final.txt  test02_format.txt  test02_temp.txt  test03_2d.txt  test03_change.txt  test03_convert.txt  test03_count.txt  test03_final.txt  test03_format.txt  test03_process.txt  test03_temp.txt  test04_2d.txt  test04_change.txt  test04_convert.txt  test04_count.txt  test04_final.txt  test04_process.txt  test04_temp.txt  test05_2d.txt  test05_change.txt  test05_convert.txt  test05_count.txt  test05_final.txt  test05_process.txt  test05_temp.txt  test111.txt
test/: only_convert_hor2ver.cpp  only_convert_punctuation.cpp  only_count.cpp  only_remove_space.cpp  test_string.cpp
